--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
         </aside> -->
 
         <main class="counter">
-            <input class="counter_value" readonly value="0">
+            <input class="counter_value" data-key="number" readonly value="0">
+
             <div class="counter_actions">
-                <button class="counter_button 
+                <button data-key="subtract" class="counter_button 
                 counter_button_first">-</button>
-                <button class="counter_button">+</button>
+                <button data-key="add" class="counter_button">+</button>
             </div>
 
             
