--- a/IWA4/index.html
+++ b/IWA4/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="/IWA4/script.js"></script>
+    <title>iwa4</title>
 </head>
 <body>
-    
+    <h1>CHALLENGE 1</h1>
 </body>
 </html>
