--- a/IWA11/index.html
+++ b/IWA11/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The JS Bakery</title>
-    <script src="./script.js" defer></script>
+    <script src="/IWA11/script.js" type="module" defer></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             data-biscuits="10" 
             data-donuts="13" 
             data-pancakes="0" 
-            data-delivered="false"
+            data-delivered="false"  
         >
             <div class="biscuits">
                 <dt>Biscuits</dt>
