--- a/IWA18/index.html
+++ b/IWA18/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kitchen Express</title>
     <link rel="stylesheet" href="/IWA18/styles.css" />
-    <script src="/scripts.js" defer type="module"></script>
+    <script src="/IWA18/scripts.js" defer type="module"></script>
   </head>
 
   <body>
